index.css
@import "react-data-grid/lib/styles.css";
@import "tailwindcss";
@plugin "tailwindcss-animate";
@plugin "@tailwindcss/forms";

@theme {
  --color-scale: #0ea5e9;
  --color-pattern: #34d399;
  --color-pose: #f472b6;
  --color-instrument: #fb923c;
  --color-scale-track: #818cf8;
  --color-pattern-track: #34d399;
  --color-pattern-clip: #14b8a6;
  --color-pose-clip: #d946ef;

  --spacing-nav: 60px;
  --spacing-half: 2px;

  --animate-background: scaleSlow 30s ease-in-out infinite;

  @keyframes scaleSlow {
    0%,
    100% {
      transform: scale(1);
    }
    50% {
      transform: scale(10);
    }
  }
}

.background {
  opacity: 0.5;
  z-index: -10;
  object-fit: cover;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-image: url("/background.png");
  user-select: none;
  pointer-events: none;
}

.cursor-paintbrush {
  cursor: url(/cursors/paintbrush.cur), pointer;
}
.cursor-wand {
  cursor: url(/cursors/wand.cur), pointer;
}
.cursor-portalguno {
  cursor: url(/cursors/portalguno.cur), pointer;
}
.cursor-portalgunb {
  cursor: url(/cursors/portalgunb.cur), pointer;
}
.cursor-gethsemane {
  cursor: url(/cursors/wand2.cur), pointer;
}
.total-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.total-center-col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.text-shadow {
  text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
}
.text-shadow-sm {
  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
}
.text-shadow-lg {
  text-shadow: 0 0 10px rgba(0, 0, 0);
}

@font-face {
  font-family: "Nunito";
  src: url("/fonts/nunito.ttf") format("truetype");
}

html,
body,
#root {
  height: 100%;
  margin: 0;
  overflow: hidden;
  font-family: "Nunito";
}

body {
  background: linear-gradient(0deg, #223e8b, #327199, #5b57ae);
  background-size: 100%;
  color: white;
  overflow: auto;
}

*::-webkit-scrollbar {
  display: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* react-d3-tree */
.d3-path {
  stroke: #555 !important;
}

/* react-data-grid */
.rdg-cell {
  outline: none;
  padding: 0;
  box-shadow: none;
  overflow: visible;
}
.rdg-cell:has(.rdg-header) {
  z-index: 40 !important;
}
.rdg-cell:has(.rdg-track) {
  z-index: 90 !important;
}

